src/objects/loan__K3_Segment__c.object
<CustomObject>
    <description>Metro 2 K3 Segment Object.</description>
    <fields>
        <fullName>loan__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>K3 Segments</relationshipLabel>
        <relationshipName>K3_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Agency_Identifier__c</fullName>
        <label>Agency Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>K3 Segments</relationshipLabel>
        <relationshipName>K3_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Mortgafe_Identification_Number__c</fullName>
        <label>Mortgafe Identification Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>K3 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K3 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>